--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,11 +1,30 @@
-<h2><%= @restaurant.name %></h2>
-<p><%= @restaurant.address %></p>
-<p><%= @restaurant.phone_number %></p>
-<p><%= @restaurant.category %></p>
+<div class="container py-3">
+  <div class="bg-light border rounded-3 p-2 mb-2">
+    <h2><%= @restaurant.name %></h2>
+    <p>Adress | <%= @restaurant.address %></p>
+    <p>Phone | <%= @restaurant.phone_number %></p>
+    <p>Cuisine | <%= @restaurant.category.capitalize %></p>
+  </div>
 
+  <div class="d-flex justify-content-start">
+    <div class="border-start border-3 p-2 mb-2">
+      <h4>Reviews</h4>
+      <ul>
+        <% @restaurant.reviews.each do |review| %>
+          <li> <%= review.rating %> - <%= review.content.capitalize %> </li>
+        <% end %>
+      </ul>
+    </div>
 
-<ul>
-  <% @restaurant.reviews.each do |review| %>
-    <li><%= review.content.capitalize %></li>
-  <% end %>
-</ul>
+    <div class="border-start border-3 ms-2 p-2 mb-2 flex-grow-1">
+      <h4>Leave a review!</h4>
+      <%= simple_form_for [@restaurant, @review] do |f| %>
+        <%= f.input :rating %>
+        <%= f.input :content %>
+        <%= f.submit "Submit review", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+
+  <%= link_to "Back to restaurants list", restaurants_path  %>
+</div>
