--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container py-3">
   <div class="bg-light border rounded-3 p-2 mb-2">
     <h2><%= @restaurant.name %></h2>
-    <p>Adress | <%= @restaurant.address %></p>
-    <p>Phone | <%= @restaurant.phone_number %></p>
-    <p>Cuisine | <%= @restaurant.category.capitalize %></p>
+    <p><strong>Adress | </strong><%= @restaurant.address %></p>
+    <p><strong>Phone | </strong><%= @restaurant.phone_number %></p>
+    <p><strong>Cuisine | </strong><%= @restaurant.category.capitalize %></p>
   </div>
 
   <div class="d-flex justify-content-start">
